--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rashila01/Assignment1_Nodejs.git"
+    "url": "git+https://github.com/Anupmahrajan/Assignment1_Nodejs.git"
   },
-  "author": "Rashila Maharjan",
+  "author": "Anup maharjan",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rashila01/Assignment1_Nodejs/issues"
+    "url": "https://github.com/Anupmahrajan/Assignment1_Nodejs/issues"
   },
-  "homepage": "https://github.com/rashila01/Assignment1_Nodejs#readme",
+  "homepage": "https://github.com/Anupmahrajan/Assignment1_Nodejs#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
